Formulated the HTML and RMD files
Formulated the HTML and RMD files

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.width=15, fig.height=10)
 
 # **1. Table of Contents**
 |
-| This project explores the various principal component-based dimensionality reduction algorithms for extracting and visualizing information using various helpful packages in <mark style="background-color: #CCECFF">**R**</mark>. Methods applied in the analysis to transform and reduce high dimensional data included the **Principal Component Analysis**, **Correspondence Analysis**, **Multiple Correspondence Analysis**, **Multiple Factor Analysis** and **Factor Analysis of Mixed Data**. The algorithms were separately applied on different iterations of the original dataset as appropriate to the given method, with the correlation plots, factorial maps and biplots (as applicable) formulated for a more intuitive visualization of the extracted dimensions.
+| This project explores different principal component-based dimensionality reduction algorithms for extracting and visualizing information using various helpful packages in <mark style="background-color: #CCECFF">**R**</mark>. Methods applied in the analysis to transform and reduce high dimensional data included the **Principal Component Analysis**, **Correspondence Analysis**, **Multiple Correspondence Analysis**, **Multiple Factor Analysis** and **Factor Analysis of Mixed Data**. The algorithms were separately applied on different iterations of the original dataset as appropriate to the given method, with the correlation plots, factorial maps and biplots (as applicable) formulated for a more intuitive visualization of the extracted dimensions.
 |
 | Dimensionality reduction is a form of unsupervised learning method aimed at reducing the number of features in a data set while retaining as much information as possible for purposes of lessening the complexity of the model, improving the performance of the learning algorithm or for formulating a more intuitive visualization of the data. The algorithms applied in this study (mostly contained in the <mark style="background-color: #CCECFF">**factoextra**</mark>, <mark style="background-color: #CCECFF">**stats**</mark> and <mark style="background-color: #CCECFF">**FactoMineR**</mark> packages) attempt to transform and project the data onto a lower-dimensional space while exploring visualization alternatives for the extracted dimensions.
 |
